# Processamento-Digital-de-Imagens

./: README.md  index.md  primeiraunid.md  segundaunid  segundaunid.md
Cannypoints/: CMakeLists.txt  main.cpp
Equalize/: CMakeLists.txt  main.cpp
Filtroespacial/: CMakeLists.txt  main.cpp
Homomorfico/: CMakeLists.txt  main.cpp
Labeling/: CMakeLists.txt  main.cpp
Motiondetector/: CMakeLists.txt  main.cpp
Regions/: CMakeLists.txt  main.cpp
Tiltshift/: CMakeLists.txt  main.cpp
Trocaregioes/: CMakeLists.txt  main.cpp
kmeans/: CMakeLists.txt  main.cpp
